--- a/bin/tidytuesday.Rmd
+++ b/bin/tidytuesday.Rmd
@@ -23,6 +23,8 @@ A weekly data project aimed at the R ecosystem. As this project was borne out of
 
 Join the `R4DS Online Learning Community` in the weekly `#TidyTuesday` event! Every week we post a raw dataset, a chart or article related to that dataset, and ask you to explore the data. While the dataset will be “tamed”, it will not always be tidy! As such you might need to apply various `R for Data Science` techniques to wrangle the data into a true tidy format. The goal of `TidyTuesday` is to apply your R skills, get feedback, explore other’s work, and connect with the greater `#RStats` community! As such we encourage everyone of all skills to participate! 
 
+More about tidytuesday is [here](https://twitter.com/hashtag/TidyTuesday?src=hashtag_click)
+
 ## An example of a contribution in the TidyTuesday
 
 ## Load Libraries
